examples/invalid/03_RecordDuplicateFields.lune
module Bad exposing (Point)

type alias Point =
  { x : Int
  , x : Int
  }
